Once again reset offcanvas z-index to that of navbar to resolve stacking order problems, letting the 'carbon' theme redefine z-index on #side-nav

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -8,7 +8,7 @@ body {
   background-color: $body-bg;
 }
 
-.offcanvas { z-index: 1030; }
+.offcanvas { z-index: $zindex-navbar; }
 .offcanvas.open { display: block; }
 .offcanvas .inner-wrap {
   padding-top: $navbar-height;
